kubernetes/main/apps/tekton-system/tekton/triggers/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-hello
spec:
  hostnames:
    - tekton-hello.${CLUSTER_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: el-hello-listener
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
